--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'/>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
-  <title>Document</title>
-  <script src='js/index.js'></script>
-  <link rel='stylesheet' href='index.css'/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
 </head>
 <body>
-  <div id='main'>
+    <div class="header">
+        <a href="" class="logo"><i class="fab fa-github"></i> </a>
 
-    <h2>GitHub Search</h2>
+        <form action="" class="search-form">
+            <input type="search" placeholder="search here...">
+             <button class="btn" type="button"><i class="fas fa-search"></i></button>
+        </form>
 
-    <form id='github-form'>
-      <input id='search' type='text' name='search'>
-      <input type='submit' name='submit'/>
-    </form>
-
-    <div id='github-container'>
-      <ul id='user-list'>
-
-      </ul>
-
-      <ul id='repos-list'>
-
-      </ul>
     </div>
+    <section class="home">
+        <div class="box-container">
 
-  </div>
-
+        </div>
+    </section>
+    <script src="./js/index.js"></script>
 </body>
 </html>
